/*
 * $Id: ChangeLog,v 1.1750 2003/11/22 09:33:32 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-23 16:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * include/Makefile
    ! Do not try to install the nonexistent hbgetcmt.ch file.

2003-11-22 01:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/macro/macro.slx
    + Added reset logic to hb_compFlexNew() incase last parse stoped on error which was recovered by the app.

2003-11-21 20:34 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
  * source/vm/hvm.c
    * Minor Correction to initialization of Ole under Windows.

2003-11-21 19:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbrdddbt.h
  * include/hbrddfpt.h
    + Added missing #include "hbsetup.h"

  * source/rdd/dbf1.c
    + Added extern c wrapper around 4 public function guarded with #if defined(HB_EXTERN_C)

2003-11-21 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * makefile.nt
  * makefile.vc
    + Added /FORCE:MULTIPLE to hbrun link command.

  * include/hbrddcdx.h
  * include/hbrdddbf.h
    + Added missing #include "hbsetup.h"

  * tests/pp_harb.ch
    + Minor revison.

2003-11-21 17:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvm.h
  * source/vm/hvm.c
    * Changed hb_vmQuit() to not directly exit() instead return errorlevel

  * source/vm/errorapi.c
  * source/vm/maindll.c
  * source/vm/mainstd.c
  * source/vm/mainwin.c
  * source/vm/gtk/mainlgtk.c
  * source/vm/pm/mainpm.c
    * Changed to exit() or return after call to hb_vmQuit()

2003-11-21 11:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/radiobtn.prg
    source/rtl/radiogrp.prg
    source/rtl/checkbox.prg
    source/rtl/tgetlist.prg
    ! Minor fix on display methods of Radio*/checkbox classes that was not showing proper color
    Reported by Jack E. Wilkinson
