@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1750 2003/11/22 09:33:32 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1751 2003/11/22 13:21:41 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-22 22:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/source/rtl/idle.c
+    ! fix in HB_IDLESTATE
+    + new .prg function HB_IDLERESET
 
 2003-11-23 16:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * include/Makefile
